out/base/celery-beat-deployment.yaml
#! celery-beat-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: celery-beat
    namespace: tasks-manager
    labels:
        com.docker.compose.project: tasks-manager
        com.docker.compose.service: celery-beat
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: tasks-manager
            com.docker.compose.service: celery-beat
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: tasks-manager
                com.docker.compose.service: celery-beat
                com.docker.compose.network.default: "true"
                com.docker.compose.network.pontsun: "true"
        spec:
            containers:
                - name: celery-beat
                  image: ghcr.io/ragusa87/tasks-manager:latest
                  imagePullPolicy: IfNotPresent
                  args:
                    - uv
                    - run
                    - celery
                    - -A
                    - task_processor
                    - beat
                    - -l
                    - info
                  ports:
                    - name: celery-bea-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: celerybeat-schedule
                      mountPath: /celerybeat-schedule
            volumes:
                - name: celerybeat-schedule
                  persistentVolumeClaim:
                    claimName: celery-beat-celery-beat-data
