out/base/celery-deployment.yaml
#! celery-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: celery
    namespace: tasks-manager
    labels:
        com.docker.compose.project: tasks-manager
        com.docker.compose.service: celery
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: tasks-manager
            com.docker.compose.service: celery
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: tasks-manager
                com.docker.compose.service: celery
                com.docker.compose.network.default: "true"
                com.docker.compose.network.pontsun: "true"
        spec:
            containers:
                - name: celery
                  image: ghcr.io/ragusa87/tasks-manager:latest
                  imagePullPolicy: IfNotPresent
                  args:
                    - uv
                    - run
                    - manage.py
                    - rundevworker
                    - --skip-checks
                  ports:
                    - name: celery-8000
                      containerPort: 8000
