out/base/web-deployment.yaml
#! web-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web
    namespace: tasks-manager
    labels:
        com.docker.compose.project: tasks-manager
        com.docker.compose.service: web
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: tasks-manager
            com.docker.compose.service: web
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: tasks-manager
                com.docker.compose.service: web
                com.docker.compose.network.default: "true"
                com.docker.compose.network.pontsun: "true"
        spec:
            containers:
                - name: web
                  image: ghcr.io/ragusa87/tasks-manager:latest
                  imagePullPolicy: IfNotPresent
                  args:
                    - sh
                    - -c
                    - uv run python manage.py migrate && uv run python manage.py collectstatic --noinput && uv run uvicorn core.asgi:application --host 0.0.0.0 --port 8000
                  ports:
                    - name: web-8000
                      containerPort: 8000
