out/base/celery-expose.yaml
#! celery-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: celery
    namespace: tasks-manager
    labels:
        com.docker.compose.project: tasks-manager
        com.docker.compose.service: celery
spec:
    selector:
        com.docker.compose.project: tasks-manager
        com.docker.compose.service: celery
    ports:
        - name: celery-8000
          port: 8000
          targetPort: celery-8000
